=== 2.3.0 / 2011-17-04

* Fixed issue#1 (Last tracker in some Flame exports receives an empty shift channel)
* Nicer progress reports
* Modified the Accumulator to support nested iterations and random access

=== 2.2.4 / 2011-04-04

* Properly deal with negative frames happening in Shake scripts sometimes. We will now recognize a script starting at negative
frames and "bump" it's frames in curves so that everything neatly starts at frame 0. Granted this does not give us the same frame range
but most apps wil go bonkers anyway if we send them negative frame numbers.

=== 2.2.3 / 2011-04-03

* Prevent zero-length trackers (trackers having no position information) from being accumulated during import.
This had adverse effects on export modules that could not export trackers containing no information. As a sidenote we
will write down in the doco that an export module should not expect empty trackers with no keyframes to be sent

=== 2.2.2 / 2011-04-03

* The last change to PFMatchit exporter had adverse effects on pftrack files, now fixed.
* Pipeline now has it's own exceptions, all inheriting from RuntimeError

=== 2.2.1 / 2011-04-01

* April fool!
* PFMAtchit requires LF in it's files instead of CRLF, but our FPTrack exporter used CRLF. Now fixed.
* Changed PFMatchit exporter to export .txt files instead of .2dt

=== 2.2.0 / 2011-03-01

* Improve documentation substantially
* Changed the Import::Base interface yo use enumeration instead of @receiver.
Upside: This allows us to convert importers to an array of trackers and other niceties.
Downside: stream_parse will be deprecated. It is however still available for backwards compatibility
  
=== 2.1.1 / 2011-02-14

* Fix handling of Shake scripts containing stabilizer nodes with no animation
* Remove underscores from tracker names exported to Syntheyes to prevent spaces from being generated

=== 2.1.0 / 2011-02-08