@@ -1,3 +1,5 @@
+* Added checks to prevent exports with empty trackers or exports which contain no data at all
+
 === 2.3.0 / 2011-17-04
 
 * Fixed issue#1 (Last tracker in some Flame exports receives an empty shift channel)
